Added collaborator to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
             </roles>
         </developer>
         <developer>
+            <id>cesar-cardinale</id>
+            <name>Cesar Cardinale</name>
+            <roles>
+                <role>Developer</role>
+                <role>Tester</role>
+            </roles>
+        </developer>
+        <developer>
             <id>baptistegasser</id>
             <name>Baptiste GASSER</name>
             <roles>
@@ -47,10 +55,8 @@
     </issueManagement>
 
     <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    
 </project>
